# CyberMD

./: .env.template  .gitignore  README.md  cli.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
tools/: __init__.py  markitdown_process.py  ocr_processor.py
tools/dots_ocr/: __init__.py  parser.py
tools/dots_ocr/model/: inference.py
tools/dots_ocr/utils/: __init__.py  consts.py  doc_utils.py  format_transformer.py  image_utils.py  layout_utils.py  output_cleaner.py
