[project]
name = "cybermd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "markitdown[docx,pptx,xls,xlsx]>=0.1.4",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pillow>=12.0.0",
    "pymupdf>=1.26.7",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
